2011-08-18  Jakub Jelinek  <jakub@redhat.com>

	PR target/50092
	* gcc.dg/torture/pr50092.c: New test.

2011-08-16  Jason Merrill  <jason@redhat.com>

	PR c++/50086
	* g++.dg/cpp0x/variadic-unresolved.C: New.

	PR c++/50054
	* g++.dg/cpp0x/initlist56.C: New.

2011-08-12  David Li  <davidxl@google.com>

	* g++.dg/abi/vbase15.C: New test.

2011-08-09  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/49923
	* gcc.dg/tree-ssa/pr49923.c: New test.

2011-08-05  Jason Merrill  <jason@redhat.com>

	PR c++/48993
	* g++.dg/cpp0x/constexpr-48089.C: Add cases.

	PR c++/49921
	* g++.dg/cpp0x/decltype31.C: New.

	PR c++/49669
	* g++.dg/init/array28.C: New.

	PR c++/49988
	* g++.dg/cpp0x/constexpr-non-const-arg3.C: New.

2011-08-05  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/49112
	* gfortran.dg/abstract_type_6.f03: Modified.
	* gfortran.dg/typebound_proc_24.f03: New.

2011-08-03  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/49948
	* gcc.dg/pr49948.c: New test.

2011-08-03  Daniel Kraft  <d@domob.eu>

	PR fortran/49885
	* gfortran.dg/auto_char_dummy_array_3.f90: New test.

2011-08-02  Jason Merrill  <jason@redhat.com>

	PR c++/43886
	* g++.dg/cpp0x/lambda/lambda-defarg2.C: New.

	PR c++/49593
	* g++.dg/cpp0x/variadic115.C: New.

	PR c++/49803
	* g++.dg/cpp0x/union5.C: New.

	PR c++/49924
	* g++.dg/cpp0x/constexpr-array4.C: New.

	PR c++/49260
	* g++.dg/cpp0x/lambda/lambda-eh2.C: Change options.

2011-07-31  Uros Bizjak  <ubizjak@gmail.com>

	PR target/49920
	* gcc.target/i386/pr49920.c: New test.

2011-07-30  Thomas Koenig  <tkoenig@gcc.gnu.org>

	Backport from trunk.
	PR fortran/48876
	* gfortran.dg/string_5.f90:  New test.

2011-07-29  Wei Guozhi  <carrot@google.com>

	Backported from mainline
	2011-07-29  Wei Guozhi  <carrot@google.com>

	PR rtl-optimization/49799
	* gcc.dg/pr49799.c: New test case.

2011-07-28  Jakub Jelinek  <jakub@redhat.com>

	PR debug/49871
	* gcc.dg/debug/dwarf2/pr49871.c: New test.

2011-07-28  Tobias Burnus  <burnus@net-b.de>
